2008-10-24  Chuck Miller  <shadowmil@gmail.com>
	
	* src/resources/iteminfo.h,src/resources/itemdb.cpp: Added attack
	range to item's info
	* src/localplayer.h,src/localplayer.cpp: Changed the getAttackRange
	method to use item's info, this is so targets will turn blue when you
	are close enough, as a result mAttackRange and setAttackRange were
	removed
	* src/beingmanager.cpp: Fixed not selecting closest being, and cleaned
	up some so the selecting code is only in one place

2008-10-24  Chuck Miller  <shadowmil@gmail.com>

	* src/localplayer.cpp: Made it so the player will auto face its target
	* src/net/beinghandler.cpp: Fixed it so the correct direction will be
	set

2008-10-23  Chuck Miller  <shadowmil@gmail.com>
	
	* src/beingmanager.cpp: Fixed a bug causing targets not to work, and
	added code that sets player_node's target to null if it gets deleted
	* src/gui/viewport.cpp: Changed some values to make targets show
	correctly

2008-10-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/Makefile.am: Fixed building with configure.

2008-10-21  Roderic Morris  <roderic@ccs.neu.edu>

	* src/CMakeLists.txt: Fixed building for cmake.

2008-10-21  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/commandhandler.cpp, src/net/posthandler.h,
	src/net/posthandler.cpp, src/net/protocol.h, src/game.h: Fixed some of
	the test stuff for the postal system.

2008-10-15  David Athay  <ko2fan@gmail.com>

	* src/localplayer.cpp, src/net/beinghandler.cpp, src/net/protocol.h,
	src/net/gameserver/player.h, src/net/gameserver/player.cpp,
	src/net/beinghandler.h, tmw.cbp: Added communicating change of
	direction to server.

2008-10-10  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/shop.cpp, src/gui/shop.h, src/resources/itemdb.cpp,
	src/shopitem.h: Some old uncommitted cleanup.

2008-10-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* po/ar.po, po/pt_BR.po, po/zh_CN.po, po/es.po, po/fr.po, po/nl.po,
	po/en_GB.po, po/pl.po, po/it.po, po/ca.po, po/da.po, po/LINGUAS,